--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                       data-delay=".5s"
                       data-duration="2000ms"
                     >
-                      M.Ánh<strong> & </strong>P.Trang
+                      Ánh<strong> & </strong>Trang
                     </h1>
                     <p data-animation="fadeInLeft" data-delay=".7">
                       Ngày 11 Tháng 10 Năm 2025
@@ -123,7 +123,7 @@
                       data-delay=".5s"
                       data-duration="2000ms"
                     >
-                      M.Ánh<strong> & </strong>M.Ánh
+                      Ánh<strong> & </strong>Trang
                     </h1>
                     <p data-animation="fadeInLeft" data-delay=".7s">
                       Ngày 20-21 Tháng 8 Âm Lịch
