--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                       Ánh<strong> & </strong>Trang
                     </h1>
                     <p data-animation="fadeInLeft" data-delay=".7">
-                      Ngày 11 Tháng 10 Năm 2025
+                    Ngày 12 Tháng 10 Năm 2025
                     </p>
                   </div>
                 </div>
@@ -126,7 +126,7 @@
                       Ánh<strong> & </strong>Trang
                     </h1>
                     <p data-animation="fadeInLeft" data-delay=".7s">
-                      Ngày 20-21 Tháng 8 Âm Lịch
+                    Ngày 12 Tháng 10 Năm 2025
                     </p>
                   </div>
                 </div>
@@ -143,7 +143,7 @@
           <div class="row d-flex justify-content-center">
             <div class="col-xl-7 col-lg-8">
               <div class="section-tittle text-center mb-70">
-                <h2>Our Love Story​</h2>
+                <h2>Câu chuyện tình yêu​</h2>
                 <img src="assets/img/gallery/tittle_img.png" alt="" />
                 <p>
                   Tình yêu của chúng tôi bắt đầu từ những khoảnh khắc giản dị nhưng đầy ấm áp. Từ những lần gặp gỡ đầu tiên, chúng tôi đã tìm thấy ở nhau sự đồng điệu và thấu hiểu. Trải qua bao vui buồn, tình cảm ấy ngày càng lớn dần, để hôm nay chúng tôi quyết định cùng nhau viết tiếp hành trình hạnh phúc bằng một đám cưới trọn vẹn tình yêu và niềm tin.
@@ -158,9 +158,9 @@
                 style="background-image: url(assets/img/gallery/story2.jpg)"
               >
                 <div class="story-details">
-                  <h4>The Proposal</h4>
+                  <h4>Lời cầu hôn</h4>
                   <p>
-                    Sau nhiều năm vun đắp, tình yêu của chúng tôi đã đủ chín muồi để bước sang một hành trình mới. Lời cầu hôn không cần quá hoa mỹ, nhưng chứa đựng tất cả chân thành và khát khao cùng nhau xây dựng một gia đình hạnh phúc.
+                    Một lời hứa giản dị nhưng chân thành đã được thốt ra trong khoảnh khắc đặc biệt. Giữa không gian lãng mạn, anh đã ngỏ lời muốn cùng em đi hết chặng đường đời. Và em đã gật đầu – không phải chỉ vì hạnh phúc trong giây phút ấy, mà vì em tin rằng hành trình phía trước sẽ đẹp hơn khi chúng ta có nhau.
                   </p>
                 </div>
               </div>
@@ -169,7 +169,7 @@
               <div class="story-img">
                 <img
                   class="story2"
-                  src="assets/img/gallery/story1.jpg"
+                  src="assets/img/gallery/KHA_2679.png"
                   alt=""
                 />
               </div>
@@ -188,7 +188,7 @@
           <div class="row d-flex justify-content-center">
             <div class="col-lg-8">
               <div class="section-tittle text-center mb-70">
-                <h2>Wedding Info</h2>
+                <h2>Thông tin đám cưới</h2>
                 <img src="assets/img/gallery/tittle_img.png" alt="" />
                 <p>
                   Chặng đường tình yêu không chỉ có hoa hồng mà còn cả thử thách, nhưng chính những điều ấy đã giúp chúng tôi thêm gắn kết và trân trọng nhau nhiều hơn. Hôm nay, chúng tôi hạnh phúc khi được mời bạn cùng chứng kiến khoảnh khắc thiêng liêng – ngày chúng tôi chính thức nên duyên vợ chồng.
@@ -208,7 +208,7 @@
                     <li>
                       <i class="fas fa-calendar-alt"></i>Ngày 11 Tháng 10, 2025
                     </li>
-                    <li><i class="far fa-clock"></i>8:30 PM</li>
+                    <li><i class="far fa-clock"></i>8:30 AM</li>
                     <li>
                       <i class="fas fa-map-marker-alt"></i>Xóm 4, Xã Hải Phong,
                       Hải Hậu, Nam Định
@@ -225,14 +225,14 @@
               <div class="single-card active text-center mb-30">
                 <div class="card-top">
                   <span class="flaticon-award"></span>
-                  <h4>Dự tiệc</h4>
+                  <h4>Mời Dự tiệc</h4>
                 </div>
                 <div class="card-bottom">
                   <ul>
                     <li>
                       <i class="fas fa-calendar-alt"></i>Ngày 12 Tháng 10, 2025
                     </li>
-                    <li><i class="far fa-clock"></i>17:30 PM</li>
+                    <li><i class="far fa-clock"></i>10:00 AM</li>
                     <li>
                       <i class="fas fa-map-marker-alt"></i>Xóm 4, Xã Hải Phong,
                       Hải Hậu, Nam Định
@@ -256,7 +256,7 @@
                     <li>
                       <i class="fas fa-calendar-alt"></i>Ngày 12 Tháng 10, 2025
                     </li>
-                    <li><i class="far fa-clock"></i>17:30 PM</li>
+                    <li><i class="far fa-clock"></i>13:00 PM</li>
                     <li>
                       <i class="fas fa-map-marker-alt"></i>Xóm 4, Xã Hải Phong,
                       Hải Hậu, Nam Định
@@ -326,13 +326,13 @@
               <div class="single-gallery mb-30">
                 <div
                   class="gallery-img"
-                  style="background-image: url(assets/img/gallery/gallery1.png)"
+                  style="background-image: url(assets/img/gallery/KHA_2603_60x90.png)"
                 ></div>
                 <div class="thumb-content-box">
                   <div class="thumb-content">
                     <h3>image 01</h3>
                     <a
-                      href="assets/img/gallery/gallery1.png"
+                      href="assets/img/gallery/KHA_2603_60x90.png"
                       class="menorie-icon"
                     >
                       <i class="ti-plus"></i
@@ -345,13 +345,13 @@
               <div class="single-gallery mb-30">
                 <div
                   class="gallery-img"
-                  style="background-image: url(assets/img/gallery/gallery2.png)"
+                  style="background-image: url(assets/img/gallery/KHA_2603_ngang.png)"
                 ></div>
                 <div class="thumb-content-box">
                   <div class="thumb-content">
                     <h3>image 02</h3>
                     <a
-                      href="assets/img/gallery/gallery1.png"
+                      href="assets/img/gallery/KHA_2603_ngang.png"
                       class="menorie-icon"
                     >
                       <i class="ti-plus"></i
@@ -364,13 +364,13 @@
               <div class="single-gallery mb-30">
                 <div
                   class="gallery-img"
-                  style="background-image: url(assets/img/gallery/gallery3.png)"
+                  style="background-image: url(assets/img/gallery/KHA_2603_ngang.png)"
                 ></div>
                 <div class="thumb-content-box">
                   <div class="thumb-content">
                     <h3>image 03</h3>
                     <a
-                      href="assets/img/gallery/gallery1.png"
+                      href="assets/img/gallery/KHA_2603_ngang.png"
                       class="menorie-icon"
                     >
                       <i class="ti-plus"></i
@@ -383,13 +383,13 @@
               <div class="single-gallery mb-30">
                 <div
                   class="gallery-img"
-                  style="background-image: url(assets/img/gallery/gallery4.png)"
+                  style="background-image: url(assets/img/gallery/KHA_2603_60x90.png)"
                 ></div>
                 <div class="thumb-content-box">
                   <div class="thumb-content">
                     <h3>image 04</h3>
                     <a
-                      href="assets/img/gallery/gallery1.png"
+                      href="assets/img/gallery/KHA_2603_60x90.png"
                       class="menorie-icon"
                     >
                       <i class="ti-plus"></i
@@ -637,7 +637,7 @@
             <div class="mb-2 mt-2 text-center">
             
             <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28796.345103579402!2d106.2073871099635!3d20.13963600294398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31360d8ab7f265ad%3A0x6dbc9d8df2dec671!2zSOG6o2kgUGhvbmcsIEjhuqNpIEjhuq11LCBOYW0gxJDhu4tuaCwgVmnhu4d0IE5hbQ!5e1!3m2!1svi!2s!4v1758899219142!5m2!1svi!2s" 
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15648.354829908152!2d106.222194!3d20.146806!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjDCsDA4JzQ4LjUiTiAxMDbCsDEzJzE5LjkiRQ!5e0!3m2!1svi!2s!4v1700000000000!5m2!1svi!2s" 
             width="100%" 
             height="400" 
             style="border:0;" 
