--- a/index.html
+++ b/index.html
@@ -520,13 +520,13 @@
                     <p class="mb-4">Chúng mình đã có đủ “chén đũa, xoong nồi”, chỉ thiếu thêm chút “vốn liếng” để xây dựng tổ ấm. Nếu bạn muốn chung vui theo cách hiện đại, hãy quét mã QR bên dưới. Từng đồng xu bạn gửi sẽ được đổi thành bữa cơm ngon và thật nhiều niềm vui trong gia đình nhỏ của chúng mình! 🏡💑</p>
                     <b>Thông tin tài khoản:</b>
                     <ol>
-                        <li>Ngân hàng: Vietcombank</li>
-                        <li>Chủ tài khoản: Vũ Minh Ánh</li>
-                        <li>Số tài khoản: 0123456789</li>
+                        <li>Ngân hàng: VietinBank CN LAO CAI - HOI SO
+                        <li>Chủ tài khoản: VU MINH ANH</li>
+                        <li>Số tài khoản: 0332497507</li>
                     </ol>
                     <p>👉 Quét QR bên dưới để mừng cưới nhanh chóng:</p></p>
                     <div class="text-center">
-                        <img src="assets/img/default-qr.8c528dac.png" alt="">
+                        <img src="assets/img/qrcodeBankMinhAnh.png" alt="">
                     </div>
                 </div>
               </div>
